--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,7 +15,10 @@
   <title>MGW Gulp4 Starter</title>
 </head>
 <body>
+  @@include('components/header.html')
   <h1>MGW Gulp4 Starter</h1>
+
+  @@include('components/footer.html')
 
   <script src="js/main.js"></script>
 </body>
